Add admin endpoints updated the frontend